# stock-trade-compression

./: .clang-format  CMakeLists.txt  README.md
compression-exercise/: CMakeLists.txt  readme.txt
compression-exercise/include/: bits.hpp  csv_trade_source.hpp  huffman.hpp  trade.hpp
compression-exercise/playground/: interpolate.hpp  test_interpolate.cpp
compression-exercise/source/: csv_trade_source.cpp  main.cpp  trade.cpp
compression-exercise/test/: test_bits.cpp  test_csv_trade_source.cpp
compression-exercise/test-files/: 2-trades.csv
include/: decoder.hpp  encoder.hpp  stats_collector.hpp
playground/: interpolate.hpp  test_interpolate.cpp
source/: CMakeLists.txt  bits.hpp  csv_trade_source.cpp  csv_trade_source.hpp  decoder.hpp  encoder.hpp  huffman.hpp  main.cpp  stats_collector.hpp  trade.cpp  trade.hpp
source/test/: CMakeLists.txt  test_bits.cpp  test_csv_trade_source.cpp  test_encoder.cpp  test_huffman.cpp  test_trade.cpp
test/: test_encoder.cpp  test_huffman.cpp  test_trade.cpp
test-files/: small.csv
